# rs-academic-paper-interpreter

./: CLAUDE.md  Cargo.toml  Makefile.toml  README.md
scripts/: install.sh  paper-export
src/: export.rs  lib.rs  main.rs  models.rs
src/agents/: mod.rs  paper_analyzer.rs  prompts.rs  traits.rs
src/agents/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src/client/: arxiv.rs  mod.rs  search.rs  semantic.rs  unpaywall.rs
src/pdf/: extractor.rs  mod.rs  resolver.rs
src/shared/: config.rs  errors.rs  logger.rs  mod.rs  utils.rs
tests/: integration_tests.rs
